--- a/registration.html
+++ b/registration.html
@@ -113,11 +113,10 @@
 
     .trainer{ display:grid; grid-template-columns: auto 1fr; gap:.9rem; align-items:center; }
     .avatar{ width:52px; height:52px; border-radius:50%; background: linear-gradient(180deg, var(--brand), var(--brand-2)); color:#0a0f1f; font-weight:900; display:grid; place-items:center; }
-    .meta{ color: var(--muted); font-size:2rem; }
-    .chip-row{ display:flex; gap:.4rem; flex-wrap:wrap; }
+    .meta{ color: var(--muted); font-size: .9rem; }
+    .chip-row{ display:flex; gap:.4rem; flex-wrap:wrap; margin-top: .25rem; }
     .chip{ font-size:.75rem; border:1px solid rgba(255,255,255,.16); padding:.2rem .5rem; border-radius:.5rem; }
-    .brand{font-size: 30px;
-
+    
     /* Footer tiny */
     .site-footer{ border-top: 1px solid rgba(255,255,255,.06); padding: 2rem 0; }
     .footer-inner{ display:grid; grid-template-columns: 1fr auto 1fr; align-items:center; gap: .75rem; }
@@ -129,10 +128,11 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a href="#" class="brand">Trainex</a>
+      <a href="index.html" class="brand">Trainex</a>
       <nav class="nav" id="primary-nav">
+        <a href="index.html#features">Features</a>
         <a href="#trainers">Trainers</a>
-        <a href="#faq">FAQ</a>
+        <a href="index.html#faq">FAQ</a>
       </nav>
       <button id="nav-toggle" class="nav-toggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
     </div>
@@ -188,10 +188,11 @@
 
             <div class="or"><span></span>or<span></span></div>
             <button type="button" class="btn btn-ghost btn-block" id="google-btn">
-              <span class="btn-icon" aria-hidden="true">G</span> Continue with Google
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M22.56,12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26,1.37-1.04,2.53-2.21,3.31v2.77h3.57c2.08-1.92,3.28-4.74,3.28-8.09Z"/><path d="M12,23c2.97,0,5.46-.98,7.28-2.66l-3.57-2.77c-.98,.66-2.23,1.06-3.71,1.06-2.86,0-5.29-1.93-6.16-4.53H2.18v2.84C3.99,20.53,7.7,23,12,23Z"/><path d="M5.84,14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43,.35-2.09V7.07H2.18C1.43,8.55,1,10.22,1,12s.43,3.45,1.18,4.93l3.66-2.84Z"/><path d="M12,5.38c1.62,0,3.06,.56,4.21,1.64l3.15-3.15C17.45,2.09,14.97,1,12,1,7.7,1,3.99,3.47,2.18,7.07l3.66,2.84c.87-2.6,3.3-4.53,6.16-4.53Z"/></svg>
+              <span>Continue with Google</span>
             </button>
 
-            <p class="fineprint">Already have an account? <a href="" id="login-link">Log in</a></p>
+            <p class="fineprint center">Already have an account? <a href="" id="login-link">Log in</a></p>
           </form>
         </div>
 
@@ -304,8 +305,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="brand">Trainex</div>
-      <nav class="nav">
-        <a href="#trainers">Trainers</a>
+      <nav class="nav small">
         <a href="#">Privacy</a>
         <a href="#">Terms</a>
       </nav>
@@ -318,7 +318,10 @@
     const toggle = document.getElementById('nav-toggle');
     const nav = document.getElementById('primary-nav');
     toggle?.addEventListener('click', () => nav.classList.toggle('show'));
-    nav?.querySelectorAll('a').forEach(a => a.addEventListener('click', () => nav.classList.remove('show')));
+    nav?.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
+        if(!a.href.includes('#')) return; // Don't hide for external links
+        nav.classList.remove('show')
+    }));
 
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -335,7 +338,7 @@
 
     // Pretend Google OAuth
     document.getElementById('google-btn').addEventListener('click', () => {
-      alert('Google sign‑in would open here. Connect your OAuth later.');
+      alert('Google sign‑in would open here. This is for demonstration only.');
     });
 
     // Form validation (client side)
@@ -360,7 +363,7 @@
     // Login link (navigate or open modal)
     document.getElementById('login-link').addEventListener('click', (e) => {
       e.preventDefault();
-      alert('Route to /login page. You can reuse the same styles.');
+      alert('This would typically route to a /login page.');
     });
   </script>
 </body>
